hphp/hack/test/typecheck/function_pointer/class_meth_reified_targs_mismatched_parameters.php
<?hh

final class Foo {
  public static function bar<reify T>(T $_): void {}
}

function test(): void {
  $x = Foo::bar<int>;

  $x("Hello");
}
